<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

   <modelVersion>4.0.0</modelVersion>
   <groupId>org.regadou</groupId>
   <artifactId>damai</artifactId>
   <packaging>jar</packaging>
	<version>0.1-SNAPSHOT</version>
   <name>damai</name>

   <properties>
      <java.version>1.8</java.version>
   </properties>

   <build>
      <finalName>damai</finalName>
      <plugins>
         <plugin>
            <artifactId>maven-compiler-plugin</artifactId>
            <configuration>
               <source>${java.version}</source>
               <target>${java.version}</target>
            </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-jar-plugin</artifactId>
           <configuration>
             <archive>
               <manifest>
                 <addClasspath>true</addClasspath>
                 <mainClass>org.regadou.damai.Bootstrap</mainClass>
               </manifest>
             </archive>
           </configuration>
         </plugin>
      </plugins>
   </build>
</project>

